<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/menu_wallet_history"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet_history" />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification" />


    <item
        android:id="@+id/menu_terms"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_conditions" />

    <item
        android:id="@+id/menu_policy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy" />


    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>