<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lytbottom"
        android:layout_below="@+id/imglogo"
        android:layout_marginBottom="@dimen/dimen_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginTop="@dimen/dimen_0dp"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:layout_marginBottom="@dimen/dimen_30dp"
            android:background="@drawable/card_shadow"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp">

            <LinearLayout
                android:id="@+id/lytlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/edtLoginMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />


                <EditText
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />


                <TextView
                    android:id="@+id/tvForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:onClick="OnBtnClick"
                    android:padding="5dp"
                    android:text="@string/forgottext"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnlogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_30dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:onClick="OnBtnClick"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvPrivacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="@dimen/dimen_5dp"
                    android:text="@string/msg_privacy_terms"
                    android:textAlignment="center"
                    android:textColor="@color/gray_blue"
                    android:textSize="@dimen/p_text_size"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtProfileOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtProfileNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtProfileConfirmNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnChangePassword"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_30dp"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:onClick="OnBtnClick"
                    android:text="@string/change_password"
                    android:textColor="@color/white" />


            </LinearLayout>


            <!--Forgot Password lyt-->

            <LinearLayout
                android:id="@+id/lytforgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/forgottext"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="+"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/edtFCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:minWidth="50dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/edtforgotmobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/forgot_message_hint"
                        android:inputType="phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnrecover"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="OnBtnClick"
                    android:text="@string/recover_pass"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:text="@string/verify_message"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>
            </LinearLayout>

            <!--OTP lyt-->

            <LinearLayout
                android:id="@+id/lytotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/otp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txtmobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/please_type_verification_code_sent_to"
                    android:textColor="@color/colorPrimary" />

                <com.axolotls.prachetadboy.helper.PinView
                    android:id="@+id/edtotp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/common_padding"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="@dimen/common_padding"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/mid_text"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:lineColor="@color/colorPrimary"
                    app:viewType="line" />

                <TextView
                    android:id="@+id/tvResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="OnBtnClick"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/resend"
                    android:textColor="@color/txt_color" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/mid_text"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnotpverify"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="20dp"
                    android:onClick="OnBtnClick"
                    android:text="@string/verify"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!--Reset Password lyt-->

            <LinearLayout
                android:id="@+id/lytResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/reset_pass_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/new_password">

                    <EditText
                        android:id="@+id/edtResetPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/confirm_new_password">

                    <EditText
                        android:id="@+id/edtResetCPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnResetPass"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="OnBtnClick"
                    android:text="@string/reset_password"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

